--- a/front-end/assets/css/custom.css
+++ b/front-end/assets/css/custom.css
@@ -1,4 +1,3 @@
-/************** BRAND AND MENU BAR **************/
 #brand, #menu-bar, #logo{
     margin:0;
 }
@@ -11,10 +10,6 @@
     background: rgba(0,0,0,0);
 }
 
-.field{
-    width: 300px;
-}
-
 .scrolling.dimmable.dimmed>.dimmer {
     overflow: auto;
 }
@@ -22,3 +17,18 @@
 #cardId{
     display: block;
 }
+
+.ui.inverted.icon.standard.delete.button{
+    box-shadow: 0 0 0 0 !important;
+}
+
+.ui.inverted.icon.standard.edit.button{
+    box-shadow: 0 0 0 0 !important;
+}
+
+#deledit-btn{
+    position: absolute;
+    z-index: 10;
+    margin: 5px;
+}
+
